--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="container" fxLayout="column">
-  <div fxFlex="none">
+  <div class="ral-toolbar-wrapper" fxFlex="none">
     <ral-user-toolbar>
       <button mat-icon-button (click)="onClickRefresh()" color="primary">
         <mat-icon aria-label="Refresh">refresh</mat-icon>
