--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -8,6 +8,10 @@
   height: 100%;
 }
 
+.ral-toolbar-wrapper {
+  background-color: #E8F5E9;  
+}
+
 .mat-progress-bar {
   width: 120px;
   margin-top: 8px;
