--- a/src/app/browse/book-list/book-list.component.scss
+++ b/src/app/browse/book-list/book-list.component.scss
@@ -1,5 +1,14 @@
+:host {
+  display: block;
+  height: 100%;
+}
+
 section {
   padding: 8px;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .ral-card-wrapper {
