--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,6 +1,5 @@
 :host {
   display: block;
-  width: 100%;
   height: 100%;
 }
 
@@ -40,9 +39,10 @@
 }
 
 .list {
+  padding: 8px;
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 8px;
+  -webkit-overflow-scrolling: touch;
 }
 
 .card-container {
