--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,6 +1,5 @@
 :host {
   display: block;
-  width: 100%;
   height: 100%;
 }
 
@@ -40,6 +39,7 @@
 .result {
   overflow-y: auto;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .card-container {
