--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,21 @@
 
 @import "~normalize.css/normalize.css";
 
+html {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  // reset box sizing
+  box-sizing: border-box;
+  -ms-overflow-style: scrollbar;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 html,
 body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  width: 100%;
   height: 100%;
 }
