--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -36,12 +36,12 @@
   width: 100%;
 }
 
-.result {
+.books-container {
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
-.card-container {
+.ral-book-wrapper {
   padding: 8px;
 }
