--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -18,8 +18,8 @@
         {{filter.label}}</mat-chip>
     </mat-chip-list>
   </div>
-  <div class="result" fxLayout="row" fxLayoutWrap fxFlex="initial">
-    <div class="card-container"
+  <div class="books-container" fxLayout="row" fxLayoutWrap fxFlex="nogrow">
+    <div class="ral-book-wrapper"
         *ngFor="let book of books"
         fxFlex="1 0 150px">
       <ral-book
