--- a/src/app/browse/book-list/book-list.component.html
+++ b/src/app/browse/book-list/book-list.component.html
@@ -9,7 +9,7 @@
   <div *ngIf="isLoading" class="ral-progress-wrapper" fxFlex="none">
     <ral-progress message="Getting books"></ral-progress>
   </div>
-  <div id="books-container" class="books-container" fxFlex="nogrow" fxLayout="row" fxLayoutWrap>
+  <div #container id="books-container" class="books-container" fxFlex="nogrow" fxLayout="row" fxLayoutWrap>
     <div class="ral-book-wrapper" fxFlex="1 0 150px"
         *ngFor="let book of books">
       <ral-book
@@ -17,7 +17,7 @@
         [routerLink]="['/browse/books', book.Id]"></ral-book>
     </div>
     <div class="ral-back-to-top-wrapper">
-      <ral-back-to-top [scrollContainerId]="'books-container'"></ral-back-to-top>
+      <ral-back-to-top [container]="container"></ral-back-to-top>
     </div>
   </div>
 </div>
