--- a/src/app/shared/back-to-top/back-to-top.component.html
+++ b/src/app/shared/back-to-top/back-to-top.component.html
@@ -1,4 +1,4 @@
-<div [@heroState]="state">
+<div [@visibleState]="state">
   <button mat-fab (click)="scrollToTop()">
     <mat-icon aria-label="Back to top">keyboard_arrow_up</mat-icon>
   </button>
