--- a/src/app/shared/launch-screen/launch-screen.component.scss
+++ b/src/app/shared/launch-screen/launch-screen.component.scss
@@ -9,7 +9,7 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  background: linear-gradient(to right bottom, #4CAF50, #81C784);
+  background: linear-gradient(to left top, #4CAF50, #81C784);
 }
 
 .logo-container {
