--- a/src/app/core/launch-screen/launch-screen.component.html
+++ b/src/app/core/launch-screen/launch-screen.component.html
@@ -1,7 +1,7 @@
 <div class="container" fxLayout="column"
+    *ngIf="!isHide"
     [@launchState]="launchState"
-    (@launchState.done)="animationDone($event)"
-    *ngIf="!hide">
+    (@launchState.done)="afterAnimationDone($event)">
   <div class="logo-container" fxFlex fxLayoutAlign="center">
     <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
     width="501" height="133" viewBox="-0.3779297 -0.0512695 501 133" enable-background="new -0.3779297 -0.0512695 501 133"
