--- a/src/app/browse/book-list/book-list.component.html
+++ b/src/app/browse/book-list/book-list.component.html
@@ -1,7 +1,7 @@
 <div class="container" fxLayout="column">
   <div class="ral-toolbar-wrapper" fxFlex="none">
     <ral-toolbar>
-      <button mat-icon-button (click)="onClickRefresh()" color="primary">
+      <button mat-icon-button color="primary" (click)="onClickRefresh()">
         <mat-icon aria-label="Refresh">refresh</mat-icon>
       </button>
     </ral-toolbar>
